--- a/resolver-underscore.mdx
+++ b/resolver-underscore.mdx
@@ -3,12 +3,10 @@ title: Underscore
 description: Using underscore expressions to define features
 ---
 
----
+Underscore expressions can be used to define and resolve features
+inline in your feature sets, from operations on sibling features.
 
-## Underscore expressions
-
-Underscore expressions can be used to define and
-resolve features from operations on other features.
+## Example
 
 Consider the feature class `RocketEngine` define below:
 
