--- a/backfilling-data.mdx
+++ b/backfilling-data.mdx
@@ -71,7 +71,7 @@ Resolvers that use [incremental ingest](/docs/sql), don't re-process data from b
 Chalk lets you reset the maximum observed timestamp of incremental resolvers to a specific timestamp,
 or re-ingest all historical data.
 
-Chalk uses [offline queries](docs/training-client) to perform this operation. Suppose that you want to add a new column,
+Chalk uses [offline queries](/docs/training-client) to perform this operation. Suppose that you want to add a new column,
 `favorite_color`, to this existing batch SQL resolver:
 
 ```py
